--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "emailjs": "^4.0.0",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^6.3.16",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-intersection-observer": "^9.3.5",
     "react-scripts": "5.0.0",
     "swiper": "^8.0.7",
     "web-vitals": "^2.1.4"
